fixed button overflow

--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ main {
 }
 
 .btn-primary {
-  flex: 0 0 100px;
+  flex: 1 1 100px;
   border: none;
   background-color: var(--accent);
   color: #ffffff;
